[Fix] 모바일 header z-index 문제로 수정

--- a/src/pages/Portfolio/SideTempList.module.css
+++ b/src/pages/Portfolio/SideTempList.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  z-index: 999;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
@@ -21,7 +21,7 @@
   width: 50%;
   height: 100vh;
   background-color: var(--white);
-  z-index: 1001;
+  z-index: 1000;
   transform: translateX(100%);
   transition: transform 0.4s ease-in-out;
 
